@@ -222,6 +222,18 @@ keywords: profiling
   user-space and kernel-space.
 
 
+profiling/timeout.stp - Show Processes Doing Polling Operations
+keywords: profiling
+
+  The timeout.stp script is based on a blog entry
+  (http://udrepper.livejournal.com/19041.html) mentioning a need for a
+  tool to help developers find applications that are polling. The
+  timeout.stp script monitors systemcall used for polling and records
+  the systemcalls that timed out rather than returned because some
+  action occurred. The script updates the screen once a second with the
+  top twenty processes.
+
+
 = READ =
 
 io/iotime.stp - Trace Time Spent in Read and Write for Files 
