@@ -1,0 +1,13 @@
+title: Show Processes Doing Polling Operations
+name: timeout.stp
+version: 1.0
+author: Uli Drepper and William Cohen
+keywords: profiling
+subsystem: kernel
+status: production
+exit: user-controlled
+output: sorted-list
+scope: system-wide
+description: The timeout.stp script is based on a blog entry (http://udrepper.livejournal.com/19041.html) mentioning a need for a tool to help developers find applications that are polling. The timeout.stp script monitors systemcall used for polling and records the systemcalls that timed out rather than returned because some action occurred. The script updates the screen once a second with the top twenty processes.
+test_check: stap -p4 timeout.stp
+test_installcheck: stap timeout.stp -c "sleep 1"
